Clean up comments in index.html

--- a/Assignment 01/index.html
+++ b/Assignment 01/index.html
@@ -50,9 +50,6 @@
 
     </div>
 </header>
-<!-- HEADER CLOSED HERE ✅ -->
-
-
 <!-- HERO SECTION -->
 <section class="hero">
 
@@ -67,8 +64,6 @@
     </div>
 
 </section>
-
-
 <!-- CATEGORY SECTION -->
 <section class="categories">
 
@@ -125,12 +120,10 @@
 
 <!-- PRODUCT SECTION -->
 <section class="product-section">
-
     <!-- Left Large Image -->
     <div class="left-image">
         <img src="images/left-model.png" alt="">
     </div>
-
     <!-- Right Slider Section -->
     <div class="right-products">
 
@@ -199,7 +192,6 @@
             </div>
 
         </div>
-
         <!-- Categories Section -->
         <div class="categories-focus">
             <div class="focus-left">
@@ -264,7 +256,7 @@
         </div>
     </div>
 </section>
-<!-- CATEGORY STRIP SECTION (Like Screenshot) -->
+<!-- CATEGORY STRIP SECTION -->
 <section class="category-strip">
 
     <div class="strip-item">
@@ -602,7 +594,7 @@
     </div>
 </section>
 
-<!-- ================= NEWSLETTER SECTION ================= -->
+<!-- NEWSLETTER SECTION  -->
 <section class="newsletter">
 
     <div class="newsletter-left">
@@ -622,7 +614,7 @@
 </section>
 
 
-<!-- ================= FOOTER SECTION ================= -->
+<!--FOOTER SECTION -->
 <footer class="footer">
 
     <div class="footer-container">
